--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "currencyConverter",
-    "slug": "currencyConverter",
+    "name": "Conversor de Moedas",
+    "slug": "Conversor de Moedas",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -27,6 +27,9 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "API_URL": "https://economia.awesomeapi.com.br/json"
     }
   }
 }
