--- a/app.json
+++ b/app.json
@@ -26,7 +26,7 @@
       }
     },
     "web": {
-      "favicon": "./assets/favicon.ico"
+      "favicon": "./assets/favicon.png"
     },
     "extra": {
       "API_URL": "https://economia.awesomeapi.com.br/json"
